@@ -17,9 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static ks.com.budgetmanagementproject.global.common.logger.BaseExceptionStatus.NON_EXISTENT_USER;
 
 @Slf4j
 @Service
@@ -40,7 +37,7 @@ public class ChatRoomService {
     public ChatRoomResponse createRoom(CreateRoomRequest request, User user) {
 
         User persistedUser = userRepository.findById(user.getId())
-                .orElseThrow(() -> new BaseException(NON_EXISTENT_USER));
+                .orElseThrow(() -> new BaseException(BaseExceptionStatus.NON_EXISTENT_USER));
 
         ChatRoom chatRoom = ChatRoom.builder()
                 .roomName(request.getRoomName())
@@ -56,21 +53,20 @@ public class ChatRoomService {
         chatRoom.addMember(member);
         ChatRoom savedChatRoom = chatRoomRepository.save(chatRoom);
 
-
-
-
         return ChatRoomResponse.from(savedChatRoom);
     }
 
     /**
-     *  채팅방 목록 조회
+     * 채팅방 목록 조회
      * @return 목록
      */
     @Transactional(readOnly = true)
     public List<ChatRoomResponse> getAllRooms() {
-        return chatRoomRepository.findAll().stream()
+
+        List<ChatRoom> chatroom = chatRoomRepository.findAll();
+        return chatroom.stream()
                 .map(ChatRoomResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -88,44 +84,48 @@ public class ChatRoomService {
     /**
      * 채팅방 입장
      * @param roomId 방번호
-     * @param user 사용자
+     * @param user   사용자
      */
-    public ChatRoomMemberResponse joinChatRoom(Long roomId, User user) {
+    public void joinChatRoom(Long roomId, User user) {
+
+        User persistedUser = userRepository.findById(user.getId())
+                .orElseThrow(() -> new BaseException(BaseExceptionStatus.NON_EXISTENT_USER));
 
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
                 .orElseThrow(() -> new BaseException(BaseExceptionStatus.CHATROOM_NOT_FOUND));
 
-        if (chatRoom.hasMember(user.getId())) {
+        if (chatRoom.hasMember(persistedUser.getId())) {
             throw new BaseException(BaseExceptionStatus.CHATROOM_ALREADY_JOINED);
         }
 
         ChatRoomMember member = ChatRoomMember.builder()
-                .userId(user.getId())
-                .username(user.getUsername())
+                .userId(persistedUser.getId())
+                .username(persistedUser.getUsername())
                 .chatRoom(chatRoom)
                 .build();
 
         chatRoom.addMember(member);
 
-        return ChatRoomMemberResponse.of(chatRoom, user);
+        ChatRoomMemberResponse.of(chatRoom, persistedUser);
     }
 
     /**
      * 채팅방 퇴장
      * @param roomId 방번호
-     * @param user 사용자
+     * @param user   사용자
      */
-    public ChatRoomMemberResponse leaveRoom(Long roomId, User user) {
+    public void leaveRoom(Long roomId, User user) {
 
+        User persistedUser = userRepository.findById(user.getId())
+                .orElseThrow(() -> new BaseException(BaseExceptionStatus.NON_EXISTENT_USER));
         ChatRoom chatRoom = chatRoomRepository.findById(roomId)
                 .orElseThrow(() -> new BaseException(BaseExceptionStatus.CHATROOM_NOT_FOUND));
-
-        ChatRoomMember member = chatRoomMemberRepository.findByChatRoom_IdAndUserId(roomId, user.getId())
+        ChatRoomMember member = chatRoomMemberRepository.findByChatRoom_IdAndUserId(roomId, persistedUser.getId())
                 .orElseThrow(() -> new BaseException(BaseExceptionStatus.CHATROOM_NOT_MEMBER));
 
         chatRoom.removeMember(member);
         chatRoomMemberRepository.delete(member);
 
-        return ChatRoomMemberResponse.of(chatRoom, user);
+        ChatRoomMemberResponse.of(chatRoom, persistedUser);
     }
 }
